update paths to images

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
                     <span class="support-title support-title-02">посетите лекцию на тему: <span class="accent">«Плодотворная дебютная идея»</span></span>
 
-                    <img class="image support-img" src="/images/support.webp" alt="Международный васюкинский турнир">
+                    <img class="image support-img" src="images/support.webp" alt="Международный васюкинский турнир">
                 </div>
 
                 <div class="game-session">
                     <div class="game-session-img">
-                        <img src="/images/game-session.webp" alt="Сеанс гроссмейстера О. Бендера">
+                        <img src="images/game-session.webp" alt="Сеанс гроссмейстера О. Бендера">
                     </div>
                     <div class="game-session-content">
                         <div class="support-title">
